[tool.poetry]
name = "ds-points"
version = "0.1.0"
description = "Data Science & Points from https://github.com/TeoMeWhy/ds-points"
authors = ["André Rocha <rocha.matcomp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
